# game.libretro.snes9x2002

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/pocketsnes/: 0001-Fix-compilation.patch  CMakeLists.txt  pocketsnes.txt
depends/common/snes9x2002/: CMakeLists.txt  snes9x2002.txt
game.libretro.pocketsnes/: addon.xml  addon.xml.in
game.libretro.snes9x2002/: addon.xml.in
